# feretui

./: .coveragerc  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  test.py  test2.py  test_connection.py  test_min.py  test_page.py  test_resource.py  test_theme.py  tox.ini
.github/workflows/: lint.yaml  tests.yaml
docs/: CHANGES.rst  api.rst  bottle.rst  conf.py  contributing.rst  django-orm.rst  django-routes.rst  feretui.rst  flask.rst  form_page_action.rst  index.rst  menus.rst  pyramid.rst  resource.rst  routes.rst  sqlalchemy.rst  starlette.rst  translation.rst  tutorials.rst
examples/bottle/: example_form.py  example_min.py  example_resource.py  requirements.txt
examples/django/example_form/: manage.py
examples/django/example_form/example_form/: asgi.py  settings.py  urls.py  wsgi.py
examples/django/example_form/myferet/: apps.py  feret.py  views.py
examples/django/example_min/: manage.py
examples/django/example_min/example_min/: asgi.py  settings.py  wsgi.py
examples/django/example_min/myferet/: feret.py  urls.py  views.py
examples/django/example_resource/: manage.py
examples/django/example_resource/example_resource/: asgi.py  settings.py  wsgi.py
examples/django/example_resource/myferet/: feret.py  models.py  views.py
examples/django/example_resource/myferet/migrations/: 0001_initial.py
examples/flask/: example_form.py  example_min.py  example_resource.py  requirements.txt
examples/pyramid/: example_form.py  example_min.py  example_resource.py  requirements.txt
examples/starlette/: example_form.py  example_min.py  example_resource.py  requirements.txt
feretui/: __init__.py  actions.py  authentications.py  conftest.py  context.py  exceptions.py  feretui.py  fields.py  form.py  helper.py  menu.py  menus.py  pages.py  request.py  resource.py  response.py  schema.py  scripts.py  session.py  template.py  thread.py  translate.py  translation.py  view.py  views.py
feretui/locale/: en.po  feretui.pot  fr.po
feretui/resources/: __init__.py  actions.py  common.py  create.py  delete.py  list.py  read.py  resource.py  update.py  view.py
feretui/resources/templates/: action.tmpl  common.tmpl  resource.tmpl
feretui/resources/tests/: test_common.py  test_create.py  test_delete.py  test_list.py  test_read.py  test_resource.py  test_update.py  test_view.py
feretui/templates/: feret.tmpl  feret_base.html  feretui.tmpl  form.tmpl  menus.tmpl  pages.tmpl
feretui/tests/: conftest.py  test_action.py  test_feretui.py  test_form.py  test_helper.py  test_job.py  test_menus.py  test_page.py  test_request.py  test_resource.py  test_response.py  test_session.py  test_template.py  test_translation.py
feretui/tests/snapshots/test_action/test_login_password_3/: snapshot.html
feretui/tests/snapshots/test_action/test_login_password_6/: snapshot.html
feretui/tests/snapshots/test_action/test_login_signup_3/: snapshot.html
feretui/tests/snapshots/test_action/test_login_signup_6/: snapshot.html
feretui/tests/snapshots/test_feretui/test_register_auth_menus_1/: after.html  before.html
feretui/tests/snapshots/test_feretui/test_render/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_bool/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_bool_data_readonly/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_bool_description/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_bool_no_label/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_bool_readonly/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_field/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_field_data_readonly/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_field_data_readonly_2/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_field_length_1/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_field_length_2/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_field_no_label/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_field_password/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_field_readonly/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_field_render_kw/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_field_required/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_field_translation/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_field_with_errors/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_radio/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_radio_description/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_radio_honrizontal/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_radio_no_label/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_radio_nolabel_2/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_radio_readonly/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_radio_readonly_2/: snapshot.html
feretui/tests/snapshots/test_form/test_form_render_radio_required/: snapshot.html
feretui/tests/snapshots/test_form/test_get_field_choices_data_readonly/: snapshot.html
feretui/tests/snapshots/test_form/test_get_field_choices_data_readonly_2/: snapshot.html
feretui/tests/snapshots/test_form/test_get_field_choices_no_label/: snapshot.html
feretui/tests/snapshots/test_form/test_get_field_choices_no_label_2/: snapshot.html
feretui/tests/snapshots/test_form/test_get_field_choices_readonly/: snapshot.html
feretui/tests/snapshots/test_form/test_get_field_choices_readonly_2/: snapshot.html
feretui/tests/snapshots/test_form/test_get_field_translation_choices_readonly/: snapshot.html
feretui/tests/snapshots/test_menus/test_AsideHeaderMenu/: snapshot.html
feretui/tests/snapshots/test_menus/test_AsideHeaderMenu_cascade/: snapshot.html
feretui/tests/snapshots/test_menus/test_AsideMenu/: snapshot.html
(+51 files in other folders)
