[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FeretUI"
description = "Small web client to build an admin interface or a little backoffice "
authors = [
    { name = "Jean-Sébastien Suzanne", email = "js.suzanne@gmail.fr" },
]
version = "0.0.1"
license = { text = "MPL2" }
requires-python = ">=3.10"
dependencies = [
    'lxml',
    'polib',
    'jinja2',
    'pydantic',
    'pydantic-i18n',
    'password-validator',
    'BeautifulSoup4',
]
dynamic = ["readme"]
keywords = [
    'admin',
    'backoffice'
]
classifiers = [
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = { file = ["README.md", "docs/CHANGES.rst"] }

[tool.setuptools.packages.find]
include = [
    "feretui*",
]

[project.optional-dependencies]
test = [
    'ruff',
    'pytest',
    'pytest-cov',
    'pyupgrade',
    'flake8-type-checking',
    'perflint',
    'flake8-logging',
    'flake8-bandit',
]

[project.scripts]
export-feretui-catalog = "feretui:scripts.export_catalog"

[project.entry-points."feretui.addons"]
feretui = "feretui.feretui:import_feretui_addons"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
    "feretui/tests"
]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
select = ["ANN", "ARG", "B", "C4", "C90", "COM", "CPY", "D", "E", "F", "FIX", "G", "I", "LOG", "N", "PERF", "PTH", "RET", "RSE", "S", "SIM", "TD", "TID", "TCH", "UP", "W", "YTT"]

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
omit = [
    "feretui/scripts.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "logger.",
    "except ImportError:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
line-length = 79
addopts = "feretui --cov=feretui --cov-report=term-missing --cov-fail-under=100"
collect_ignore_glob = ["feretui/tests/"]
